<resources>
    <string name="app_name">Vi3Education</string>
    <string name="help_support">Support</string>
    <string name="share">Share App</string>
    <string name="Rateus">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="course">My Courses</string>
    <string name="account">Account</string>
    <string name="logout">LOGOUT</string>
    <string name="upcoming">Courses</string>
    <string name="slogan">Committed To Excellence</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Your name</string>
    <string name="email">Enter email</string>
    <string name="enter_email">Your email</string>
    <string name="contact">Contact</string>
    <string name="address">ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="signup">SIGNUP</string>
    <string name="have_anaccount">Already have an account?</string>
    <string name="login">Login</string>
    <string name="enter_contact">Your contact number</string>
    <string name="enter_address">Your address</string>
    <string name="enter_password">Your password</string>
    <string name="dont_have_account">Don\'t have account ?</string>
    <string name="signupp">Signup</string>
    <string name="user_name">Enter User Name</string>
    <string name="pass_enter">Enter Password</string>
    <string name="student">STUDENT</string>
    <string name="tutor">TUTOR</string>
    <string name="subject">SUBJECT</string>
    <string name="enter_subject">Your Subject</string>
    <string name="invalid_name">Please enter valid name</string>
    <string name="invalid_PhoneNumber">Please enter valid mobile number</string>
    <string name="invalid_Email">Please enter valid email</string>
    <string name="invalid_Password">Enter valid password</string>
    <string name="passwordtext">Dear Customer\n Your VI3Edutech password has been sent to your registered email id.\n Please check your email for confirmation and Do not share it to others.\n Thank You.</string>
    <string name="forgot_password">Forget Password ?</string>
    <string name="findtutor">Find Tutor</string>
    <string name="new_pass">Enter new password</string>
    <string name="retypepass">Retype password</string>
    <string name="invalid_address">Enter valid address</string>
    <string name="invalid_subject">Enter valid subject</string>
    <string name="searchtutor">Search by Tutor</string>
    <string name="change_pass">Change Password</string>
    <string name="razorpay_key_id">rzp_live_KsQHSXfbuwXrCx</string>
    <string name="razorpay_secret_key">FFIQ14zSAe6D7K0pixihLOHA</string>
    <string name="paymentmode">Please select payment method</string>
    <string name="withdraw">Withdraw your wallet money to your bank account.</string>
    <string name="share_now">Withdraw</string>
    <string name="wallet">Wallet</string>
</resources>