<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account"
                android:title="@string/account"/>
            <item
                android:id="@+id/nav_changePwrd"
                android:icon="@drawable/ic_secure"
                android:title="@string/change_pass"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_question"
                android:title="@string/about" />

            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/rate_us"
                android:icon="@drawable/ic_stars"
                android:title="@string/Rateus" />
            <item
                android:visible="false"
                android:id="@+id/nav_logout"
                android:title="Logout" />



</menu>
