<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/backgroundbg"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/register"
                        android:textSize="@dimen/_24sdp"
                        android:textColor="@color/colorAccent"
                        android:paddingLeft="@dimen/_3sdp" />
                    <LinearLayout
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/register"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/name"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/EditName"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawablePadding="@dimen/_5sdp"
                            android:drawableLeft="@drawable/ic_baseline_person_24"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_name"
                            android:inputType="text"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/email"
                        android:layout_below="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/email"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/EditEmail"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawableLeft="@drawable/ic_baseline_email_24"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/contact"
                        android:layout_below="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/contact"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/EtContact"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawableLeft="@drawable/ic_baseline_phone_in_talk_24"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_contact"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/subject"
                        android:layout_below="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/subject"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/Et_subject"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawableLeft="@drawable/ic_baseline_menu_book_24"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_subject"
                            android:inputType="text"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/address"
                        android:layout_below="@+id/subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/address"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/EtAddress"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawableLeft="@drawable/ic_baseline_add_comment_24"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_address"
                            android:inputType="text"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/btnsign"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/address"
                        android:layout_alignParentRight="true">
                        <com.vi3.vi3education.customecomponent.CustomButton
                            android:id="@+id/btnSignup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvForgotPassword"
                            android:layout_marginTop="@dimen/_18sdp"
                            android:background="@drawable/capsule"
                            android:gravity="center"
                            android:text="@string/signup"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17sdp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_below="@+id/btnsign"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">
                        <com.vi3.vi3education.customecomponent.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/have_anaccount"
                            android:textColor="#000000"
                            android:textSize="@dimen/_14sdp" />
                        <com.vi3.vi3education.customecomponent.CustomTextView
                            android:layout_width="wrap_content"
                            android:id="@+id/TvLogin"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="#0422C6"
                            android:textSize="@dimen/_17sdp" />

                    </LinearLayout>
                </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>