<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black_trans"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundbg"
            android:orientation="vertical">
            <ImageView
                android:visibility="gone"
                android:id="@+id/ivClosePopup"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:background="@drawable/cross"
                android:layout_marginRight="@dimen/_8sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/login"
                        android:textSize="@dimen/_24sdp"
                        android:textColor="@color/colorAccent"
                        android:paddingLeft="@dimen/_3sdp" />


                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/email"
                        android:layout_below="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/email"
                            android:textColor="@color/gradEnd"

                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/EditEmail"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawableLeft="@drawable/ic_baseline_email_24"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />

                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/pass"
                        android:layout_below="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.vi3.vi3education.customecomponent.CustomTextView
                            style="@style/general_lable_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_3sdp"
                            android:text="@string/password"
                            android:textColor="@color/gradEnd"
                            android:textSize="@dimen/_12sdp"
                            app:font_name="NunitoBold.ttf"
                            android:paddingLeft="@dimen/_3sdp" />

                        <com.vi3.vi3education.customecomponent.CustomEdittext
                            android:id="@+id/EtPassword"
                            style="@style/general_edittext_style"
                            android:layout_width="match_parent"
                            android:drawableLeft="@drawable/ic_baseline_lock_24"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/_14sdp"
                            app:font_name="NunitoLight.ttf" />

                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:id="@+id/namee"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/register"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        app:boxBackgroundMode="outline"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/user_name"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:id="@+id/et_user_name"
                            android:backgroundTint="@color/white"
                            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                            app:boxCornerRadiusTopStart="@dimen/_10sdp"
                            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_below="@+id/namee"
                        android:id="@+id/passee"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        app:boxBackgroundMode="outline"
                        app:passwordToggleEnabled="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/pass_enter"
                            android:gravity="center_vertical"
                            android:inputType="textPassword"
                            android:imeOptions="actionDone"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:id="@+id/et_password"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:backgroundTint="@color/white"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.vi3.vi3education.customecomponent.CustomTextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_below="@+id/passee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginRight="@dimen/_27sdp"
                        android:text="@string/forgot_password"
                        android:textColor="#048BF6"
                        android:textSize="@dimen/_13sdp"
                        app:font_name="NunitoSemiBold.ttf"
                        android:layout_alignParentRight="true" />


                    <LinearLayout
                        android:id="@+id/btnsign"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/tvForgotPassword"
                        android:layout_alignParentRight="true">
                        <com.vi3.vi3education.customecomponent.CustomButton
                            android:id="@+id/btnSignup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvForgotPassword"
                            android:layout_marginTop="@dimen/_18sdp"
                            android:background="@drawable/capsule"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17sdp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_below="@+id/btnsign"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">
                        <com.vi3.vi3education.customecomponent.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/dont_have_account"
                            android:textColor="#000000"
                            android:textSize="@dimen/_14sdp" />
                        <com.vi3.vi3education.customecomponent.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_signup"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/signupp"
                            android:textColor="#0422C6"
                            android:textSize="@dimen/_17sdp" />

                    </LinearLayout>
                </RelativeLayout>




        </LinearLayout>

</RelativeLayout>