<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_secure"/>
        <com.vi3.vi3education.customecomponent.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:textColor="@color/blue_800"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            android:gravity="center"/>
        <com.vi3.vi3education.customecomponent.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Make sure you remember your password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"/>
        <com.vi3.vi3education.customecomponent.CustomTextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:textSize="@dimen/_14sdp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:text="FORGOT PASSWORD"/>
        <com.vi3.vi3education.customecomponent.CustomEdittext
            android:layout_width="match_parent"
            android:id="@+id/et_userName"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_blue"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:hint="@string/email"
          />
        <com.vi3.vi3education.customecomponent.CustomEdittext
            android:layout_width="match_parent"
            android:id="@+id/et_newPassword"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_blue"
            android:layout_marginTop="@dimen/_8sdp"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"            android:hint="@string/new_pass"
            />
        <com.vi3.vi3education.customecomponent.CustomEdittext
            android:layout_width="match_parent"
            android:id="@+id/et_Retypepass"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawableLeft="@drawable/ic_lock_blue"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"            android:hint="@string/retypepass" />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">

        <com.vi3.vi3education.customecomponent.CustomButton
            android:layout_width="match_parent"
            android:id="@+id/reset_pass"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue_800"
            android:text="Reset Password" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>